Improved support for multiple classloaders in IncrementingUuidGenerator (#2853)
Corrected a test-case which fails rarely but sometimes.
Added possibility to give a specific classloader identifier.

Fixes: #2851

Co-authored-by: Julien Kronegg <julien [at] kronegg.ch>